crates/toml_edit/tests/fixtures/invalid/datetime-malformed-no-leads.stderr
TOML parse error at line 1, column 17
  |
1 | no-leads = 1987-7-05T17:45:00Z
  |                 ^
Invalid date-time
